cabal-version:      2.4

name:               miniML
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             zoep
maintainer:         zoe.paraskevopoulou@gmail.com

common common
    ghc-options: -Wall
    default-language:   Haskell2010
    build-depends:
        base                   >= 4.19.0.0,
        --base                   >= 4.17.2,
        containers             >= 0.5,
        array                  >= 0.5.3.0,
        prettyprinter          >= 1.7.1,
        prettyprinter-ansi-terminal
                               >= 1.1.3,
        text                   >= 2.1.2,
        QuickCheck             >= 2.13.2,
        mtl                    >= 2.3.1

-- notes: gia run ekana install to latest apo ghcup ghc kai to latest apo ghcup cabal
-- an ennoousate kai oxi edit sto .cabal arxeio, tote mallon den ekana authn thn ergasia epituxws.

library
    import:             common
    build-tool-depends: happy:happy, alex:alex
    hs-source-dirs:     src
    exposed-modules:    
        MiniML
        MiniML.Lex
        MiniML.Syntax
        MiniML.Error
        MiniML.Parse
        MiniML.Print
        MiniML.Typeinf

executable miniML
    import:           common
    hs-source-dirs:   CLI
    main-is:          Main.hs
    build-depends:    miniML
    
test-suite test
    import:           common
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:    Gen
    build-depends:
        miniML,
        base                   >= 4.19.0.0,
        tasty                  >= 1.2,
        tasty-quickcheck       >= 0.10,
        hunit,
        test-framework,
        test-framework-providers,
        parsec,
        Quickcheck,


